# rust-schnorr

./: .editorconfig  Cargo.toml  README.md
src/: adapter.rs  crypto.rs  lib.rs  math.rs
