[package]
name = "rust-schnorr"
version = "0.1.0"
authors = ["Arik Sosman <git@arik.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num = "0.2.0"
rand = "0.7.2"
secp256k1 = "0.15.5"
sha2 = "0.8.0"